--- a/package.json
+++ b/package.json
@@ -11,21 +11,23 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~9.1.0",
-    "@angular/common": "~9.1.0",
-    "@angular/compiler": "~9.1.0",
-    "@angular/core": "~9.1.0",
-    "@angular/fire": "^6.0.0",
-    "@angular/forms": "~9.1.0",
-    "@angular/platform-browser": "~9.1.0",
-    "@angular/platform-browser-dynamic": "~9.1.0",
-    "@angular/router": "~9.1.0",
-    "firebase": "^7.14.5",
-    "ngx-pagination": "^5.0.0",
-    "rxjs": "~6.5.4",
-    "sweetalert2": "^9.10.7",
-    "tslib": "^1.10.0",
-    "zone.js": "~0.10.2"
+    "@angular/animations": "9.1.0",
+    "@angular/common": "9.1.0",
+    "@angular/compiler": "9.1.0",
+    "@angular/core": "9.1.0",
+    "@angular/fire": "6.0.0",
+    "@angular/forms": "9.1.0",
+    "@angular/platform-browser": "9.1.0",
+    "@angular/platform-browser-dynamic": "9.1.0",
+    "@angular/router": "9.1.0",
+    "core-js": "3.6.4",
+    "firebase": "7.14.5",
+    "ngx-pagination": "5.0.0",
+    "rxjs": "6.5.4",
+    "src": "^1.1.2",
+    "sweetalert2": "9.13.1",
+    "tslib": "1.11.1",
+    "zone.js": "0.10.3"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.901.0",
